[gd_scene load_steps=11 format=3 uid="uid://dalxyv7w1w8if"]

[ext_resource type="Script" path="res://Scenes/select_image.gd" id="1_d1prc"]
[ext_resource type="AudioStream" uid="uid://p25mx42m8pf" path="res://Assets/Sounds/Musics/former-102685.mp3" id="2_jwgqu"]
[ext_resource type="Texture2D" uid="uid://bfp4y624irki1" path="res://Assets/SelectImageScene/list_bg.jpg" id="2_sp6aj"]
[ext_resource type="PackedScene" uid="uid://bcuvfg5ys2hkn" path="res://SubScenes/options.tscn" id="2_yu0la"]
[ext_resource type="Texture2D" uid="uid://bb3sj61ajmjd3" path="res://Assets/SelectImageScene/list_logo.png" id="3_7vdqe"]
[ext_resource type="Script" path="res://Scenes/SelectSceneMusicPlayer.gd" id="5_xnt2l"]
[ext_resource type="PackedScene" uid="uid://bksb1u0c38wk3" path="res://AutoLoad/scene_particles.tscn" id="6_najir"]

[sub_resource type="Animation" id="Animation_ap6tk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("title:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(303, 196)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("title:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, 9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("title:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.0936237]
}

[sub_resource type="Animation" id="Animation_dgq04"]
resource_name = "ani"
length = 3.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("title:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(303, 196), Vector2(303, 196), Vector2(303, 196), Vector2(303, 196)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("title:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(12, 25), Vector2(9, 19), Vector2(2, 24), Vector2(12, 25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("title:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.0936237, -0.0936237, -0.0936237, -0.0936237]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sjisd"]
_data = {
"RESET": SubResource("Animation_ap6tk"),
"ani": SubResource("Animation_dgq04")
}

[node name="SelectImage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d1prc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sp6aj")

[node name="TitleAnimation" type="AnimationPlayer" parent="TextureRect"]
libraries = {
"": SubResource("AnimationLibrary_sjisd")
}

[node name="title" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00520833
anchor_top = 0.15
anchor_right = 0.0192708
anchor_bottom = 0.166667
offset_left = 9.0
offset_top = 9.0
offset_right = 312.0
offset_bottom = 205.0
rotation = -0.0936237
texture = ExtResource("3_7vdqe")
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -681.0
offset_top = -366.0
offset_right = 701.0
offset_bottom = 362.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 9

[node name="SelectSceneMusicPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("2_jwgqu")
bus = &"Music"
script = ExtResource("5_xnt2l")

[node name="AudioDelayPlay" type="Timer" parent="."]
process_mode = 3

[node name="scene_particles" parent="." instance=ExtResource("6_najir")]
layout_mode = 1

[node name="Options" parent="." instance=ExtResource("2_yu0la")]
visible = false
layout_mode = 1

[node name="WaitTimer" type="Timer" parent="."]

[connection signal="finished" from="SelectSceneMusicPlayer" to="SelectSceneMusicPlayer" method="_on_finished"]
